# flowscript

./: .gitignore  CONTRIBUTING.md  README.md  README_cn.md  SECURITY.md  flowscript-skill-generator-design_cn.md  flowscript-skill-generator-design_en.md
.github/workflows/: ci.yml
minimal_flowscript_agent/: flowscript-agent-design_cn.md  flowscript-agent-design_en.md  pyproject.toml
minimal_flowscript_agent/minimize_agent/: __init__.py  cli.py  engine.py  errors.py  fake_agent.py  flow_loader.py  i18n.py  model_adapter.py  schema_subset.py  tool_runtime.py  trace_store.py
skills_cn/csv-quality-report-demo/: FLOWSCRIPT.md  SKILL.md  input_schema.json
skills_cn/csv-quality-report-demo/agents/: openai.yaml
skills_cn/csv-quality-report-demo/prompts/: interpret_profile_cn.md  parse_request_cn.md
skills_cn/csv-quality-report-demo/references/: artifact_contract.md  flow_contract.md
skills_cn/csv-quality-report-demo/schemas/: interpretation.schema.json
skills_cn/csv-quality-report-demo/scripts/: common.py  execute.py  finalize.py  validate.py  validate_summary.py
skills_cn/csv-quality-report-demo/tests/: replay_cases.jsonl
skills_cn/flowscript-skill-generator/: SKILL.md
skills_cn/flowscript-skill-generator/agents/: openai.yaml
skills_cn/flowscript-skill-generator/references/: dsl_patterns.md  flowscript_format.md  skill_package_contract.md  validation_checklist.md
skills_en/csv-quality-report-demo/: FLOWSCRIPT.md  SKILL.md  input_schema.json
skills_en/csv-quality-report-demo/agents/: openai.yaml
skills_en/flowscript-skill-generator/: SKILL.md
(+30 files in other folders)
